# hk-public-transport

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
scripts/: 01_route.sql  02_stops.sql  03_fares.sql  search_check.py  search_fts.sql  search_route_prefix.sql  smoke_check.py
